data/derived/sp14/progs/unify/prog3592.ml.out
Characters 29-47:
  let foo = List.map incr [9]::List.map decr [10];;
                               ^^^^^^^^^^^^^^^^^^
Error: This expression has type int list
       but an expression was expected of type int list list
       Type int is not compatible with type int list 
